--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
@@ -13,6 +13,7 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
+    "tslint": "tslint -c tslint.json app/**/*.ts",
     "typings": "typings",
     "webdriver:update": "webdriver-manager update"
   },
@@ -29,17 +30,20 @@
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
-    "systemjs": "0.19.27",
+    "angular2-in-memory-web-api": "0.0.10",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "node-uuid": "^1.4.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.10",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
+    "tsconfig-glob": "^0.3.3",
+    "tsd": "^0.6.5",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "canonical-path": "0.0.2",
@@ -53,7 +57,13 @@
     "karma-htmlfile-reporter": "^0.2.2",
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.3.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "gulp": "^3.9.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^3.6.0",
+    "gulp-typescript": "^2.8.0",
+    "browser-sync": "^2.10.0",
+    "del": "^2.1.0"
   },
   "repository": {}
 }
